--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,14 @@ services:
     entrypoint:
       - python
       - /src/allocation/entrypoints/redis_eventconsumer.py
+    networks:
+      - allocation-network
 
   api:
     image: allocation-image
     depends_on:
-      - redis_pubsub
+      - postgres
+      - redis
     environment:
       - DB_HOST=postgres
       - DB_PASSWORD=abc123
@@ -45,6 +48,13 @@ services:
       - --port=80
     ports:
       - "5005:80"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:80/"]
+      interval: 1s
+      timeout: 3s
+      retries: 10
+    networks:
+      - allocation-network
 
   postgres:
     image: postgres:9.6
@@ -53,9 +63,17 @@ services:
       - POSTGRES_PASSWORD=abc123
     ports:
       - "54321:5432"
+    networks:
+      - allocation-network
 
   redis:
     image: redis:alpine
     ports:
       - "63791:6379"
+    networks:
+      - allocation-network
+
+networks:
+  allocation-network:
+    driver: bridge
 
